# enterprise_agent_assistan

./: Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  update_test_file.py
qdrant_data/collections/enterprise_kb/0/: replica_state.json
src/agents/: graph.py  kb_agent.py  scheduler_agent.py  state.py  summary_agent.py  tool_agent.py
src/api/: routes.py  stream_response.py
src/config/: settings.py
src/rag/: document_parser.py  retriever.py  vector_store.py
src/tools/: api_tool.py  data_analysis_tool.py  database_tool.py  file_tool.py  web_search.py
src/utils/: common.py  logger.py
static/: index.html
static/css/: style.css
static/js/: main.js
tests/: conftest.py  test_agents.py  test_api.py  test_integration.py  test_rag.py  test_tools.py
